update about-us responsive phone tablet

--- a/about-us.html
+++ b/about-us.html
@@ -99,7 +99,7 @@
                 <span class="carousel-number-text">01</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Financial Advisory</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >Working with FATH CAPITAL connects our clients to a large of experience and expertise. By listening to their financial objectives, our team will identify the right solution best suited to our clients’ needs. Specialized
                   services include :
@@ -116,7 +116,7 @@
                 <span class="carousel-number-text">02</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Pre-ipo Advisory</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >Advising our clients to make them ready for going public. All requirements to go public needed will be guided by us to maximize shareholder values. Starting from review of clients condition then proposing to clients what
                   they should do before they are going public and finally submitting the requirements to regulatory and working closely with Underwriter and supporting parties to make sure IPO success. Specialized services include:
@@ -134,7 +134,7 @@
                 <span class="carousel-number-text">03</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Merger & Acquisition</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >We advise our clients to execute their M&A plans. M&A is one of growth strategy which many companies pursuing nowadays. Not all M&A process is going successfully. Some M&A are failures. We help our clients to minimize
                   risk of failures. Starting with the right strategy for M&A. Furthermore, we advise how to identify and give clients introduction to potential strategic and financial partners. Specialized services include:
@@ -152,7 +152,7 @@
                 <span class="carousel-number-text">04</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Capital Raising</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >With our extensive network, we advise our clients in identifying the right strategy in raising capital. Whether they should go to raise capital from public through IPO or keep private and seeking funding from private
                   investors. We also advise different structures which are better and suitable with clients condition. Basically there are two choices that clients can choose, either equity-based or debt-based. Specialized services include:
@@ -166,11 +166,12 @@
                   <li>Advising in negotiation</li>
                 </ul>
               </div>
+              <br />
               <div class="carousel-item">
                 <span class="carousel-number-text">05</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Investment Advisory : Ipo Fund Management</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >Each IPO give us an investment opportunity. From buy-side perspective, we offer our clients to invest their money in IPO. We evaluate which IPO is good prospective which clients can decide to invest. Specialized services
                   include:</span
@@ -186,7 +187,7 @@
                 <span class="carousel-number-text">06</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Investment Advisory: Bridging Ipo Fund Management</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >Investing in Pre-IPO give clients an attractive return investment opportunity. We are facilitating clients to invest in target companies that are willing to go public in less than two years ahead. After target companies
                   going public, clients can exit and obtain high return. Specialized services include:
@@ -202,7 +203,7 @@
                 <span class="carousel-number-text">07</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Valuation</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >Valuation is an art. We advise our clients to maximize their company valuation. From clients information, we will guide a compelling story to get higher valuation for clients. Specialized services include:
                 </span>
@@ -216,7 +217,7 @@
                 <span class="carousel-number-text">08</span><span class="carousel-numberper-text">/08</span><br />
                 <span class="carousel-title-text">Forensic Investigation</span>
                 <div class="carousel-line"></div>
-                <br /><br />
+                <br />
                 <span class="carousel-text"
                   >Our forensic investigation will look beyond the numbers to identify missing or incomplete data, financial discrepancies, and/or financial fraud. We help clients through the legal and operational complexities, and come to
                   timely decisions so that clients can get on with business. Specialized services include:
@@ -263,7 +264,7 @@
           </div>
           <div class="col-foot col-contact col-12 col-md-4 col-lg-4 d-flex justify-content-center">
             <div class="fo-div-title">
-              <span class="fo-title">Plaza Simatupang</span><br /><span class="fo-sub-title">TB. Simatupang KAV IS No.1 Jakarta 12310, Indonesia</span><br /><br />
+              <span class="fo-title">Plaza Simatupang</span><br /><span class="fo-sub-title">TB. Simatupang KAV IS No.1 Jakarta 12310, Indonesia</span><br />
               <div class="fo-title-contact">
                 <span class="fo-title">Contact</span><br /><span class="fo-sub-title"
                   >Email: info@fathcapital.com <br />
