--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <img src="img/bg-contact.png" alt="bg-contact.png" class="img-main-contact" />
+      <img src="img/bg-contact-crop.png" alt="bg-contact.png" class="img-main-contact" />
     </div>
     <section class="s1-blog-detail">
       <!-- Start Navbar -->
