update blog enable klik photos

--- a/blog-nextpage.html
+++ b/blog-nextpage.html
@@ -71,25 +71,25 @@
             <div class="container">
               <div class="row">
                 <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                  <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                  <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                   <div class="div-blog-small">
-                    <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                    <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                     <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                     <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                   </div>
                 </div>
                 <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                  <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                  <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                   <div class="div-blog-small">
-                    <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                    <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                     <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                     <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                   </div>
                 </div>
                 <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                  <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                  <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                   <div class="div-blog-small">
-                    <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                    <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                     <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                     <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                   </div>
@@ -106,25 +106,25 @@
           <div class="container">
             <div class="row">
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-blog-next-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
@@ -141,25 +141,25 @@
           <div class="container">
             <div class="row">
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /></a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
