--- a/blog.html
+++ b/blog.html
@@ -64,9 +64,11 @@
             </div>
           </div>
           <div class="row mt-5 ml-2">
-            <div class="col-lg-7 div-img-big"><img src="img/img-blog-big.png" alt="blog-big" class="img-fluid img-big" /></div>
+            <div class="col-lg-7 div-img-big">
+              <a href="blog-detail.html"><img src="img/img-blog-big.png" alt="blog-big" class="img-fluid img-big" /></a>
+            </div>
             <div class="col-sm-12 col-md-10 col-lg-5 div-blog-big">
-              <span class="blog-big-date">April 8, 2020</span><br /><span class="blog-big-title">IPO Karya Bersama Anugerah</span>
+              <span class="blog-big-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-big-title">IPO Karya Bersama Anugerah</span></a>
               <p class="blog-big-p mt-2 mr-2 mb-0">
                 Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. Pada tahun 2019 pemegang saham menambah modal dan perusahaan melakukan revaluasi aset untuk memuluskan rencana Go Publik
                 di […]
@@ -83,25 +85,25 @@
           <div class="container">
             <div class="row">
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /> </a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /> </a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-blog-small-md col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /> </a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
@@ -118,25 +120,25 @@
           <div class="container">
             <div class="row">
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /> </a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /> </a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
               </div>
               <div class="col-blog-small col-blog-small-md-2 col-12 col-md-6 col-lg-4 d-flex align-self-start justify-content-around">
-                <img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" />
+                <a href="blog-detail.html"><img src="img/img-blog-small.png" alt="home-bg" class="img-fluid img-home" /> </a>
                 <div class="div-blog-small">
-                  <span class="blog-small-date">April 8, 2020</span><br /><span class="blog-small-title">IPO Karya Bersama Anugerah</span>
+                  <span class="blog-small-date">April 8, 2020</span><br /><a href="blog-detail.html"><span class="blog-small-title">IPO Karya Bersama Anugerah</span></a>
                   <p class="blog-small-p mt-2 mb-0">Perusahaan developer properti ini memiliki ekuitas negatif tiga tahun berturut-turut sejak 2016-2018. […]</p>
                   <a class="blog-small-readmore" href="blog-detail.html">Read More >></a>
                 </div>
