--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     <!-- START WHAT WE DO SECTION -->
     <section class="s2-blog-detail">
       <div class="d-flex justify-content-center">
-        <div class="col-11 col-md-10 col-lg-10 col-page-contact">
+        <div class="col-10 col-md-10 col-lg-10 col-page-contact">
           <div class="row d-flex justify-content-center">
             <div class="div-contact-title">
               <span class="contact-title">Get In Touch</span>
@@ -72,52 +72,43 @@
           <div class="row d-flex justify-content-center">
             <div class="div-contact-desc">
               <div class="container container-input-contact">
-                <div class="row row-input-contact">
-                  <div class="col-lg-12">
-                    <div class="row">
-                      <div class="col-lg-5 title-input-contact">Your Name (required)</div>
-                      <div class="col-lg-7 title-input-contact">Your Email (required)</div>
+                <form class="row-input-contact">
+                  <div class="form-row">
+                    <div class="form-group col-md-5">
+                      <label class="title-input-contact" for="inputName">Your Name (required)</label>
+                      <input type="text" class="form-control" id="inputName" placeholder="" />
+                    </div>
+                    <div class="form-group col-md-7">
+                      <label class="title-input-contact" for="inputEmail">Your Email (required)</label>
+                      <input type="email" class="form-control" id="inputEmail" placeholder="" />
                     </div>
                   </div>
-                  <div class="col-lg-12">
-                    <div class="row">
-                      <div class="col-lg-5"><input class="input-contact" type="text" /></div>
-                      <div class="col-lg-7"><input class="input-contact" type="text" /></div>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label class="title-input-contact" for="inputService">Pick Your Service</label>
+                      <select id="inputService" class="form-control">
+                        <option value="1" selected>Consulting</option>
+                        <option value="2">Planning</option>
+                        <option value="3">Nutrition</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label class="title-input-contact" for="inputZip">Subject</label>
+                      <input type="text" class="form-control" id="inputSubject" />
                     </div>
                   </div>
-                </div>
-                <div class="row row-input-contact">
-                  <div class="col-lg-12">
-                    <div class="row">
-                      <div class="col-lg-6 title-input-contact">Pick Your Service</div>
-                      <div class="col-lg-6 title-input-contact">Subject</div>
+                  <div class="form-row">
+                    <div class="form-group col-md-12">
+                      <label class="title-input-contact" for="inputMessage">Your Message</label>
+                      <textarea class="form-control input-textarea-contact" id="inputMessage" type="text"></textarea>
                     </div>
                   </div>
-                  <div class="col-lg-12">
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <select class="form-select input-contact" aria-label="Default select example">
-                          <option value="1" selected>Consulting</option>
-                          <option value="2">Planning</option>
-                          <option value="3">Nutrition</option>
-                        </select>
-                      </div>
-                      <div class="col-lg-6"><input class="input-contact" type="text" /></div>
+                  <div class="form-row">
+                    <div class="form-group col-md-12 d-flex justify-content-center">
+                      <button type="submit" class="btn-submit">SEND</button>
                     </div>
                   </div>
-                </div>
-                <div class="row row-input-contact">
-                  <div class="col-lg-12">
-                    <div class="row">
-                      <div class="col-lg-6 title-input-contact">Your Message</div>
-                    </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="row">
-                      <div class="col-lg-12"><textarea class="input-textarea-contact" type="text"></textarea></div>
-                    </div>
-                  </div>
-                </div>
+                </form>
               </div>
             </div>
           </div>
