--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;800&family=Raleway:wght@300;400;500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
+    <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/tablet-style.css" />
     <link rel="stylesheet" href="css/desktop-style.css" />
@@ -376,12 +377,12 @@
       <!-- START FOOTER SECTION -->
       <section class="vertical-scrolling s6 container-fluid fp-auto-height">
         <div class="row d-flex justify-content-center">
-          <div class="col-12 mb-4">
+          <div class="col-12  col-lg-9 mb-4">
             <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
           </div>
         </div>
         <div class="row d-flex justify-content-center">
-          <div class="col-6 mb-4 d-flex justify-content-start">
+          <div class="col-6 col-lg-3 mb-4 d-flex justify-content-center">
             <div class="fo-div-title">
               <p class="fo-title">Jakarta Office :</p>
               <p class="fo-sub-title">Indonesia Stock Exchange Tower 2, 17th Floor <br>Jl. Jend. Sudirman Kav. 52-53, <br>Jakarta 12190</p>
@@ -389,7 +390,7 @@
               <p class="fo-sub-title">Singapore Land Tower, 37th Floor <br>50 Raffles Place <br>Singapore 048623</p>
             </div>
           </div>
-          <div class="col-6 mb-4 d-flex justify-content-start">
+          <div class="col-6 col-lg-3 mb-4 d-flex justify-content-center">
             <div class="fo-div-title">
               <p class="fo-title">Jakarta Office 2 :</p>
               <p class="fo-sub-title">Plaza Simatupang <br>TB. Simatupang KAV IS No. 1 <br>Jakarta 12310, Indonesia</p>
@@ -397,8 +398,18 @@
               <p class="fo-sub-title">Email: info@fathcapital.com <br>Tel: +6221 5157613</p>
             </div>
           </div>
+          <div class="col-12 col-lg-3 d-flex justify-content-center only-desktop">
+            <div class="fo-div-title">
+              <span class="fo-title">Follow Us on Social Media</span>
+              <div>
+                <i class="fa-brands fa-instagram img-social"></i>
+                <i class="fa-brands fa-facebook-square img-social"></i>
+                <i class="fa-brands fa-linkedin img-social"></i>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center no-desktop">
           <div class="col-12 d-flex justify-content-start">
             <div class="fo-div-title">
               <span class="fo-title">Follow Us on Social Media</span>
