--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Raleway:wght@300;400;500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
+    <!-- <link rel="stylesheet" href="css/root.css" /> -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/blog.css" />
     <link rel="stylesheet" href="css/tablet-blog.css" />
