--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
       <!-- START WHY US SECTION -->
       <section class="vertical-scrolling s3 container-fluid">
-        <div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center align-items-center">
           <div class="col-12 d-flex justify-content-center align-items-center p-0">
             <img src="./img/img-header-why-back.png" alt="whyback" class="img-back" />
             <span class="header">Why Us</span>
