--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;800&family=Raleway:wght@300;400;500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet" />
 
     <!-- Style -->
-    <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/tablet-style.css" />
-    <link rel="stylesheet" href="css/desktop-style.css" />
+    <link rel="stylesheet" href="dist/css/main.css" />
     
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/61528eba73.js" crossorigin="anonymous"></script>
@@ -39,14 +37,14 @@
       <section class="vertical-scrolling s1">
         <!-- Start Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light shadow-5-strong">
-          <a class="navbar-brand" href="#">FathCapital</a>
+          <a class="navbar-brand" href="/">FathCapital</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blog.html">Blog</a>
@@ -174,7 +172,7 @@
             <img src="./img/img-header-why-back.png" alt="whyback" class="img-back" />
             <span class="header">Why Us</span>
           </div>
-          <div class="col-11 col-sm-10 col-md-6 ml-2 mt-5">
+          <div class="col-11 col-sm-10 col-md-8 ml-2 mt-5">
             <div class="vertical-line">
               <div class="round-line d-flex flex-column">
                 <div class="row" onclick="showContent('.step1')">
@@ -212,7 +210,7 @@
                 <div class="row" onclick="showContent('.step5')">
                   <div class="dot step5">
                     <div class="timeline-text">
-                      <h3 class="timeline-head th5">Amanah – Trustworth – Iintegrity</h3>
+                      <h3 class="timeline-head th5">Amanah – Trustworth – Integrity</h3>
                       <h4 class="timeline-body" hidden>Focus to increase client valuation proposition and firm sitting at their side.</h4>
                     </div>
                   </div>
@@ -280,13 +278,13 @@
               </div>
             </div>
             <div class="row mt-5 d-flex justify-content-center align-items-center">
-              <div class="col-12 mb-3 col-sm-6 col-md-3 d-flex justify-content-center align-items-center">
-                <span class="text-partner">Official Partner :</span>
+              <div class="col text-partner mb-3 col-sm-6 col-md-4 d-flex justify-content-center align-items-center">
+                <span>Official Partner :</span>
               </div>
-              <div class="col-3 col-md-1 d-flex justify-content-center align-items-center">
+              <div class="col-3 col-md-2 d-flex justify-content-center align-items-center">
                 <img src="img/img-client-g20.png" alt="g20" class="img-fluid" />
               </div>
-              <div class="col-3 col-md-1 d-flex justify-content-center align-items-center">
+              <div class="col-3 col-md-2 d-flex justify-content-center align-items-center">
                 <img src="img/img-client-wbaf.png" alt="wbaf" class="img-fluid" />
               </div>
             </div>
@@ -304,25 +302,29 @@
           </div>
           <div class="col-12 mt-5 no-desktop main-article">
             <article>
-                <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                <div class="image mr-sm-4">
+                  <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                </div>
                 <div class="text">
-                    <a href="blog-detail.html"><h2 class="blog-big-title">IPO Karya Bersama Anugerah</h2></a>
-                    <p class="blog-big-date">August 8, 2020</p>
-                    <p class="blog-big-p mt-2 mb-0">
+                    <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
+                    <p class="blog-date">August 8, 2020</p>
+                    <p class="blog-p mt-2 mb-0">
                         Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
                     </p>
-                    <a class="blog-big-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
+                    <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
                 </div>
             </article>
             <article>
-                <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                <div class="image mr-sm-4">
+                  <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                </div>
                 <div class="text">
-                    <a href="blog-detail.html"><h2 class="blog-big-title">IPO Karya Bersama Anugerah</h2></a>
-                    <p class="blog-big-date">August 8, 2020</p>
-                    <p class="blog-big-p mt-2 mb-0">
-                        Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
-                    </p>
-                    <a class="blog-big-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
+                      <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
+                      <p class="blog-date">August 8, 2020</p>
+                      <p class="blog-p mt-2 mb-0">
+                          Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
+                      </p>
+                      <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
                 </div>
             </article>
             <div class="d-flex justify-content-center align-items-center mx-auto">
@@ -375,48 +377,87 @@
       <!-- END FINANCIAL INSIGHT SECTION -->
 
       <!-- START FOOTER SECTION -->
-      <section class="vertical-scrolling s6 container-fluid fp-auto-height">
-        <div class="row d-flex justify-content-center">
-          <div class="col-12  col-lg-9 mb-4">
-            <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
-          </div>
-        </div>
-        <div class="row d-flex justify-content-center">
-          <div class="col-6 col-lg-3 mb-4 d-flex justify-content-center">
-            <div class="fo-div-title">
-              <p class="fo-title">Jakarta Office :</p>
-              <p class="fo-sub-title">Indonesia Stock Exchange Tower 2, 17th Floor <br>Jl. Jend. Sudirman Kav. 52-53, <br>Jakarta 12190</p>
-              <p class="fo-title">Singapore Office :</p>
-              <p class="fo-sub-title">Singapore Land Tower, 37th Floor <br>50 Raffles Place <br>Singapore 048623</p>
-            </div>
-          </div>
-          <div class="col-6 col-lg-3 mb-4 d-flex justify-content-center">
-            <div class="fo-div-title">
-              <p class="fo-title">Jakarta Office 2 :</p>
-              <p class="fo-sub-title">Plaza Simatupang <br>TB. Simatupang KAV IS No. 1 <br>Jakarta 12310, Indonesia</p>
-              <p class="fo-title">Our Contact</p>
-              <p class="fo-sub-title">Email: info@fathcapital.com <br>Tel: +6221 5157613</p>
-            </div>
-          </div>
-          <div class="col-12 col-lg-3 d-flex justify-content-center only-desktop">
-            <div class="fo-div-title">
-              <span class="fo-title">Follow Us on Social Media</span>
-              <div>
-                <i class="fa-brands fa-instagram img-social"></i>
-                <i class="fa-brands fa-facebook-square img-social"></i>
-                <i class="fa-brands fa-linkedin img-social"></i>
+      <section class="vertical-scrolling fp-auto-height s6">
+        <div class="container">
+          <div class="row pt-4">
+            <div class="col-12 mb-4">
+              <div class="logo">
+                <img src="img/img-logo.png" alt="img-logo" class="img-fluid img-logo" />
               </div>
             </div>
           </div>
-        </div>
-        <div class="row d-flex justify-content-center no-desktop">
-          <div class="col-12 d-flex justify-content-start">
-            <div class="fo-div-title">
-              <span class="fo-title">Follow Us on Social Media</span>
-              <div>
-                <i class="fa-brands fa-instagram img-social"></i>
-                <i class="fa-brands fa-facebook-square img-social"></i>
-                <i class="fa-brands fa-linkedin img-social"></i>
+          <div class="row pb-4">
+            <div class="col-lg-9">
+              <div class="row">
+                <div class="col-12 col-md-6 mb-4">
+                  <div class="fo-card">
+                    <div class="fo-div-title">
+                      <p class="fo-title">Jakarta Office :</p>
+                      <p class="fo-sub-title">Indonesia Stock Exchange Tower 2, 17th Floor <br>Jl. Jend. Sudirman Kav. 52-53, <br>Jakarta 12190</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 mb-4">
+                  <div class="fo-card">
+                    <div class="fo-div-title">
+                      <p class="fo-title">Jakarta Office 2 :</p>
+                      <p class="fo-sub-title">Plaza Simatupang <br>TB. Simatupang KAV IS No. 1 <br>Jakarta 12310, Indonesia</p>
+                    </div>    
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 mb-4">
+                  <div class="fo-card">
+                    <div class="fo-div-title">
+                      <p class="fo-title">Singapore Office :</p>
+                      <p class="fo-sub-title">Singapore Land Tower, 37th Floor <br>50 Raffles Place <br>Singapore 048623</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 mb-4">
+                  <div class="fo-card">
+                    <div class="fo-div-title">
+                      <p class="fo-title">Our Contact</p>
+                      <p class="fo-sub-title">Email: info@fathcapital.com <br>Tel: +6221 5157613</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="row">
+                <div class="col-12 mb-2">
+                  <div class="fo-card">
+                    <div class="fo-div-title">
+                      <span class="fo-title">Follow Us on Social Media</span>
+                      <div class="fo-social">
+                        <a href="#">
+                          <div class="img-social">
+                            <svg class="svg-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                              <path fill="rgb(72, 160, 230)" d="M224,202.66A53.34,53.34,0,1,0,277.36,256,53.38,53.38,0,0,0,224,202.66Zm124.71-41a54,54,0,0,0-30.41-30.41c-21-8.29-71-6.43-94.3-6.43s-73.25-1.93-94.31,6.43a54,54,0,0,0-30.41,30.41c-8.28,21-6.43,71.05-6.43,94.33S91,329.26,99.32,350.33a54,54,0,0,0,30.41,30.41c21,8.29,71,6.43,94.31,6.43s73.24,1.93,94.3-6.43a54,54,0,0,0,30.41-30.41c8.35-21,6.43-71.05,6.43-94.33S357.1,182.74,348.75,161.67ZM224,338a82,82,0,1,1,82-82A81.9,81.9,0,0,1,224,338Zm85.38-148.3a19.14,19.14,0,1,1,19.13-19.14A19.1,19.1,0,0,1,309.42,189.74ZM400,32H48A48,48,0,0,0,0,80V432a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V80A48,48,0,0,0,400,32ZM382.88,322c-1.29,25.63-7.14,48.34-25.85,67s-41.4,24.63-67,25.85c-26.41,1.49-105.59,1.49-132,0-25.63-1.29-48.26-7.15-67-25.85s-24.63-41.42-25.85-67c-1.49-26.42-1.49-105.61,0-132,1.29-25.63,7.07-48.34,25.85-67s41.47-24.56,67-25.78c26.41-1.49,105.59-1.49,132,0,25.63,1.29,48.33,7.15,67,25.85s24.63,41.42,25.85,67.05C384.37,216.44,384.37,295.56,382.88,322Z"/>
+                            </svg>
+                          </div>
+                          Instagram
+                        </a>
+                        <a href="#">
+                          <div class="img-social">
+                            <svg class="svg-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                              <path fill="rgb(72, 160, 230)" d="M400 32H48A48 48 0 0 0 0 80v352a48 48 0 0 0 48 48h137.25V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.27c-30.81 0-40.42 19.12-40.42 38.73V256h68.78l-11 71.69h-57.78V480H400a48 48 0 0 0 48-48V80a48 48 0 0 0-48-48z"/>
+                            </svg>
+                          </div>
+                          Facebook
+                        </a>
+                        <a href="#">
+                          <div class="img-social">
+                            <svg class="svg-social" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                              <path fill="rgb(72, 160, 230)" d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-48.9 158.8c.2 2.8.2 5.7.2 8.5 0 86.7-66 186.6-186.6 186.6-37.2 0-71.7-10.8-100.7-29.4 5.3.6 10.4.8 15.8.8 30.7 0 58.9-10.4 81.4-28-28.8-.6-53-19.5-61.3-45.5 10.1 1.5 19.2 1.5 29.6-1.2-30-6.1-52.5-32.5-52.5-64.4v-.8c8.7 4.9 18.9 7.9 29.6 8.3a65.447 65.447 0 0 1-29.2-54.6c0-12.2 3.2-23.4 8.9-33.1 32.3 39.8 80.8 65.8 135.2 68.6-9.3-44.5 24-80.6 64-80.6 18.9 0 35.9 7.9 47.9 20.7 14.8-2.8 29-8.3 41.6-15.8-4.9 15.2-15.2 28-28.8 36.1 13.2-1.4 26-5.1 37.8-10.2-8.9 13.1-20.1 24.7-32.9 34z"/>
+                            </svg>
+                          </div>
+                          Twitter
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
