Financial Insight Improvement

--- a/index.html
+++ b/index.html
@@ -300,37 +300,65 @@
             <img src="./img/img-header-financial-back.png" alt="finback" class="img-back" />
             <span class="header">Financial Insight</span>
           </div>
-          <div class="col-12 mt-5 no-desktop main-article">
-            <article>
-                <div class="image mr-sm-4">
-                  <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
-                </div>
-                <div class="text">
-                    <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
-                    <p class="blog-date">August 8, 2020</p>
-                    <p class="blog-p mt-2 mb-0">
-                        Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
-                    </p>
-                    <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
-                </div>
-            </article>
-            <article>
-                <div class="image mr-sm-4">
-                  <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
-                </div>
-                <div class="text">
+          <div class="col-12 mt-5 no-desktop overlay">
+            <div class="main-article">
+              <article>
+                  <div class="image mr-sm-4">
+                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                  </div>
+                  <div class="text">
                       <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
                       <p class="blog-date">August 8, 2020</p>
                       <p class="blog-p mt-2 mb-0">
                           Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
                       </p>
                       <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
-                </div>
-            </article>
-            <div class="d-flex justify-content-center align-items-center mx-auto">
-              <button class="btn-view-more" onclick="goto_blog()"><span class="fi-view-more">view more</span></button>
+                  </div>
+              </article>
+              <article>
+                  <div class="image mr-sm-4">
+                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                  </div>
+                  <div class="text">
+                        <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
+                        <p class="blog-date">August 8, 2020</p>
+                        <p class="blog-p mt-2 mb-0">
+                            Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
+                        </p>
+                        <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
+                  </div>
+              </article>
+              <article>
+                  <div class="image mr-sm-4">
+                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                  </div>
+                  <div class="text">
+                      <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
+                      <p class="blog-date">August 8, 2020</p>
+                      <p class="blog-p mt-2 mb-0">
+                          Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
+                      </p>
+                      <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
+                  </div>
+              </article>
+              <article>
+                  <div class="image mr-sm-4">
+                    <a href="blog-detail.html"><img src="img/img-blog-big.png" /></a>
+                  </div>
+                  <div class="text">
+                        <a href="blog-detail.html"><h2 class="blog-title">IPO Karya Bersama Anugerah</h2></a>
+                        <p class="blog-date">August 8, 2020</p>
+                        <p class="blog-p mt-2 mb-0">
+                            Making a large downpayment is not the conservative investment you believe it is. The risks of putting 20% down on a home are real. Know what you should do.
+                        </p>
+                        <a class="blog-readmore" href="blog-detail.html">Read More &gt;&gt;</a>
+                  </div>
+              </article>
+              <div class="d-flex justify-content-center align-items-center mx-auto mb-5">
+                <button class="btn-view-more" onclick="goto_blog()"><span class="fi-view-more">view more</span></button>
+              </div>
             </div>
-            </div>
+          </div>
           <div class="col-10 mt-5 only-desktop">
             <div class="row d-flex justify-content-center">
               <div class="col-12 col-md-4 d-flex justify-content-center insight" style="background: url(img/img-home-bg.png) center center / cover no-repeat">
